doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\BlueJ\lib\bluejcore.jar;D:\BlueJ\lib\junit-4.12.jar;D:\BlueJ\lib\junit-jupiter-5.5.2.jar;D:\BlueJ\lib\junit-jupiter-api-5.5.2.jar;D:\BlueJ\lib\junit-jupiter-engine-5.5.2.jar;D:\BlueJ\lib\junit-jupiter-migrationsupport-5.5.2.jar;D:\BlueJ\lib\junit-jupiter-params-5.5.2.jar;D:\BlueJ\lib\junit-platform-commons-1.5.2.jar;D:\BlueJ\lib\junit-platform-console-1.5.2.jar;D:\BlueJ\lib\junit-platform-console-standalone-1.5.2.jar;D:\BlueJ\lib\junit-platform-engine-1.5.2.jar;D:\BlueJ\lib\junit-platform-launcher-1.5.2.jar;D:\BlueJ\lib\junit-platform-reporting-1.5.2.jar;D:\BlueJ\lib\junit-platform-runner-1.5.2.jar;D:\BlueJ\lib\junit-platform-suite-api-1.5.2.jar;D:\BlueJ\lib\junit-platform-testkit-1.5.2.jar;D:\BlueJ\lib\junit-quickcheck-core-0.9.jar;D:\BlueJ\lib\junit-vintage-engine-5.5.2.jar;D:\BlueJ\lib\hamcrest-core-1.3.jar;D:\BlueJ\lib\hamcrest-library-1.3.jar;D:\BlueJ\lib\lang-stride.jar;D:\BlueJ\lib\javafx\lib\javafx.base.jar;D:\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\BlueJ\lib\javafx\lib\javafx.media.jar;D:\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\BlueJ\lib\javafx\lib\javafx.web.jar;D:\GITProjects\A5
-d
D:\GITProjects\A5\doc
-encoding
UTF-8
-charset
UTF-8
D:\GITProjects\A5\A5.java
<---- end of javadoc command ---->
Loading source file D:\GITProjects\A5\A5.java...
D:\GITProjects\A5\A5.java:119: error: unclosed string literal
            System.out.printf("%s: ["", key);
                                     ^
1 error
